# PolyFac

./: CMakeLists.txt  README.md
lib/imath/: imath.c  imath.h  imrat.c  imrat.h
src/math/: CoefficientDomain.h  CoefficientField.h  FFElement.cpp  FFElement.h  Integer.cpp  Integer.h  Rational.cpp  Rational.h
src/polynomial/: PolyUtils.h  PolyUtils.tpp  Polynomial.cpp  Polynomial.h  Polynomial.tpp  Term.h
test/: Assertions.h  test.cpp
test/math/: IntegerTest.cpp  IntegerTest.h  RationalTest.cpp  RationalTest.h
test/polynomial/: PolynomialTest.cpp  PolynomialTest.h
